style: 调整编辑器样式

--- a/src/style/dark/css-vars.css
+++ b/src/style/dark/css-vars.css
@@ -2,7 +2,7 @@ html.dark {
   --el-bg-color: #484848;
 
   --w-e-textarea-bg-color: #202120;
-  --w-e-textarea-color: #333;
+  --w-e-textarea-color: #fff;
   --w-e-textarea-border-color: #202120;
   --w-e-textarea-slight-border-color: #e8e8e8;
   --w-e-textarea-slight-color: #6b7280;
