style: 修复暗黑模式下部分饿了么组件无法正确识别css变量的问题

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -16,3 +16,6 @@ input {
 .message-box-custom-class {
   min-width: 350px !important;
 }
+.el-popover.el-popper {
+  background: var(--el-bg-color-overlay) !important
+}
