fix: 修复生产环节的样式冲突问题

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -10,6 +10,10 @@ input {
   outline:none
 }
 
+button, [type=button], [type=reset], [type=submit] {
+  background-color: var(--el-button-bg-color)
+}
+
 .el-main {
   padding: 0 !important;
 }
