feat: 重构tailwind相关代码，初步支持动态换肤

--- a/src/plugins/tailwindcss/tailwindcss.css
+++ b/src/plugins/tailwindcss/tailwindcss.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-base: theme('colors.white');
+    --color-text-base: theme('colors.black');
+    --color-off-base: theme('colors.gray.50');
+    --color-text-muted: theme('colors.gray.600');
+    --color-text-muted-hover: theme('colors.gray.500');
+    --color-primary: theme('colors.blue.800');
+    --color-secondary:theme('colors.blue.200');
+  }
+
+  .dark {
+    --color-base: theme('colors.gray.900');
+    --color-text-base: theme('colors.gray.100');
+    --color-off-base: theme('colors.gray.800');
+    --color-text-muted:theme('colors.gray.300');
+    --color-text-muted-hover: theme('colors.gray.200');
+    --color-primary: theme('colors.blue.500');
+    --color-secondary: theme('colors.blue.200');
+  }
+
+  .sky {
+    --color-base: theme('colors.sky.100');
+    --color-dark: theme('colors.blue.100');
+    --color-text-base: theme('colors.gray.800');
+    --color-off-base: theme('colors.sky.200');
+    --color-text-muted:theme('colors.gray.600');
+    --color-text-muted-hover: theme('colors.sky.300');
+    --color-primary: theme('colors.amber.700');
+    --color-secondary: theme('colors.amber.400');
+  }
+}
