--- a/src/style/sky/css-vars.css
+++ b/src/style/sky/css-vars.css
@@ -1,13 +1,14 @@
 html.sky {
   --el-menu-bg-color: #e0f2fe;
   --el-fill-color-blank: #f0f9ff;
-  --el-bg-color: #e0f2fe;
+  --el-bg-color: #f0f9ff;
   --el-fill-color-lighter: #e0f2fe;
   --el-color-info-light-9: #c7e5f9;
   --el-color-info-light-8: #fff;
   --el-color-primary-light-8: #fff;
   --el-color-info: #fff;
   --el-border-color: #fff;
+  --el-mask-color: #e0f2fe;
 
   --w-e-textarea-bg-color: #e0f2fe;
   --w-e-textarea-color: #fff;
