chore: 修复editor样式问题

--- a/src/style/sky/css-vars.css
+++ b/src/style/sky/css-vars.css
@@ -21,7 +21,7 @@ html.sky {
 
   --w-e-toolbar-color: #ffffff;
   --w-e-toolbar-bg-color: #cbe5f8;
-  --w-e-toolbar-active-color: #e0f2fe;
+  --w-e-toolbar-active-color: #ffffff;
   --w-e-toolbar-active-bg-color: #cdeaf5;
   --w-e-toolbar-disabled-color: #ffffff;
   --w-e-toolbar-border-color: #ffffff;
