fix: 修复switch样式问题

--- a/src/style/sky/css-vars.css
+++ b/src/style/sky/css-vars.css
@@ -7,7 +7,7 @@ html.sky {
   --el-color-info-light-8: #fff;
   --el-color-primary-light-8: #fff;
   --el-color-info: #fff;
-  --el-border-color: #fff;
+  --el-border-color: #c7e5f9;
   --el-mask-color: #e0f2fe;
 
   --w-e-textarea-bg-color: #e0f2fe;
